--- a/testEmmet041001.html
+++ b/testEmmet041001.html
@@ -39,6 +39,7 @@
 	</style>
 </head>
 <body>
+	<div>$ git clone git@github.com:maolincool99/learngit.git</div>
 	<div id="dId">
 		<h3>1.  初始化 </h3>
 		<p>
